feat: implement price simulation engine per spec
  Core simulation loop
  - TickScheduler drives tick-based loop (1 tick = 1 simulated minute);
    synchronized tick/openMarket/closeMarket for thread safety
  - Auto open at market-open-hour, auto close at market-close-hour with
    double-close guard (&&marketState.isOpen())
  - PriceCalculator implements §6.2 formula: random walk + clamped order
    pressure [-0.05,0.05] + event component (magnitude × eventWeight)
  - Per-tick OHLCV PriceHistory records; crash recovery restores current
    price from latest history and tick counter via countByTicker

  Order matching (§6.3 / §6.4)
  - LIMIT orders fill at limitPrice; MARKET orders fill at currentPrice
  - Intra-day expiry checked against simulated expiresAt each tick
  - At market close: LIMIT orders → EXPIRED, MARKET orders → REJECTED
  - Trade record saved on every fill with weighted-average fill price and
    exchange fee (price × qty × feeRate); fee rate runtime-configurable

  Market events (§7)
  - AutoEventTrigger: weighted random selection, at-most-one market-wide
    guard, multiplicative magnitude stacking across MARKET/SECTOR/STOCK
    scopes, null-target guard for non-MARKET events
  - onTick() called explicitly from TickScheduler (deterministic ordering)
  - Admin TRIGGER_EVENT Kafka command for manual event firing

  Simulated clock
  - SimulatedClock service seeds from start-date + restored tick count on
    startup; advances 1 simulated minute per tick
  - All Kafka payloads (PRICE_UPDATE, ORDER_UPDATE, MARKET_EVENT) use
    simulatedClock.getFormattedTime() for market_time
  - All persisted timestamps (Order.updatedAt, Trade.executedAt,
    PriceHistory.timestamp) use simulatedClock.getSimulatedInstant()

  Kafka / infrastructure
  - StringJsonMessageConverter added to KafkaConfig so @KafkaListener
    methods can declare typed Map parameters
  - AdminCommandConsumer uses Map<String,Object> to handle numeric JSON
    values (fee_rate); delegates op